--- a/ava/package.json
+++ b/ava/package.json
@@ -3,21 +3,19 @@
     "test": "ava *.spec.js"
   },
   "dependencies": {
-    "ava": "^0.22.0",
+    "@vue/test-utils": "^1.0.0-beta.24",
+    "ava": "^0.25.0",
     "babel": "^6.23.0",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.6.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-stage-2": "^6.24.1",
     "babel-register": "^6.26.0",
     "browser-env": "^3.2.0",
     "require-extension-hooks": "^0.3.0",
     "require-extension-hooks-babel": "^0.1.1",
-    "require-extension-hooks-vue": "^0.4.0",
-    "vue": "^2.4.2",
-    "vue-test-utils": "https://github.com/vuejs/vue-test-utils/"
+    "require-extension-hooks-vue": "^1.1.0",
+    "vue": "^2.4.2"
   },
   "ava": {
     "babel": "inherit",
