--- a/jest/.babelrc
+++ b/jest/.babelrc
@@ -1,7 +1,4 @@
 {
-  "presets": [
-    "stage-2",
-    "es2015"
-  ],
-  "plugins": ["transform-runtime"],
+  "presets": ["env"],
+  "plugins": ["transform-runtime"]
 }
