--- a/jest/package.json
+++ b/jest/package.json
@@ -10,15 +10,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "babel-jest": "^21.0.0",
+    "@vue/test-utils": "^1.0.0-beta.24",
+    "babel-jest": "^23.4.2",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.6.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-stage-2": "^6.24.1",
-    "jest": "^21.0.1",
-    "jest-vue": "^0.5.3",
+    "jest": "^23.5.0",
+    "jest-vue": "^0.8.2",
     "vue": "^2.4.2",
-    "vue-test-utils": "https://github.com/vuejs/vue-test-utils/"
+    "vue-template-compiler": "^2.5.17"
   },
   "jest": {
     "moduleFileExtensions": [
