--- a/karma-mocha/package.json
+++ b/karma-mocha/package.json
@@ -14,24 +14,24 @@
     ]
   },
   "dependencies": {
+    "@vue/test-utils": "^1.0.0-beta.24",
     "babel-core": "^6.0.0",
     "babel-loader": "^7.1.2",
     "babel-polyfill": "^6.26.0",
-    "babel-preset-es2015": "^6.0.0",
-    "babel-preset-stage-2": "^6.0.0",
-    "chai": "^3.5.0",
-    "karma": "^1.7.1",
+    "babel-preset-env": "^1.7.0",
+    "chai": "^4.1.2",
+    "css-loader": "^1.0.0",
+    "karma": "^3.0.0",
     "karma-chrome-launcher": "^2.2.0",
     "karma-mocha": "^1.3.0",
-    "karma-spec-reporter": "^0.0.31",
-    "karma-webpack": "^2.0.4",
-    "mocha": "^3.5.0",
-    "puppeteer": "^0.10.2",
+    "karma-spec-reporter": "^0.0.32",
+    "karma-webpack": "^3.0.0",
+    "mocha": "^5.2.0",
+    "puppeteer": "^1.7.0",
     "vue": "^2.4.2",
-    "vue-loader": "^13.0.4",
-    "vue-style-loader": "^1.0.0",
+    "vue-loader": "^15.3.0",
+    "vue-style-loader": "^4.1.2",
     "vue-template-compiler": "^2.4.2",
-    "vue-test-utils": "https://github.com/vuejs/vue-test-utils",
-    "webpack": "^3.5.6"
+    "webpack": "^4.16.5"
   }
 }
