--- a/mocha-webpack/package.json
+++ b/mocha-webpack/package.json
@@ -7,24 +7,26 @@
   "author": "Edd Yerburgh",
   "license": "MIT",
   "dependencies": {
-    "avoriaz": "^3.0.0",
-    "babel-core": "^6.25.0",
-    "babel-eslint": "^7.2.3",
-    "babel-loader": "^7.1.1",
+    "@vue/test-utils": "^1.0.0-beta.24",
+    "avoriaz": "^6.3.0",
+    "babel-core": "^6.26.3",
+    "babel-eslint": "^8.2.6",
+    "babel-loader": "^7.1.5",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
-    "chai": "^4.1.0",
-    "css-loader": "^0.28.4",
-    "jsdom": "^11.1.0",
+    "chai": "^4.1.2",
+    "css-loader": "^1.0.0",
+    "jsdom": "^11.12.0",
     "jsdom-global": "^3.0.2",
-    "mocha": "^3.4.2",
-    "mocha-webpack": "next",
-    "standard": "^10.0.2",
-    "vue": "^2.4.2",
-    "vue-loader": "^13.0.2",
-    "vue-template-compiler": "^2.4.2",
-    "vue-test-utils": "https://github.com/vuejs/vue-test-utils/",
-    "webpack": "^3.4.1",
-    "webpack-node-externals": "^1.6.0"
+    "mocha": "^5.2.0",
+    "mocha-webpack": "^2.0.0-beta.0",
+    "standard": "^11.0.1",
+    "vue": "^2.5.17",
+    "vue-loader": "^15.3.0",
+    "vue-style-loader": "^4.1.2",
+    "vue-template-compiler": "^2.5.17",
+    "webpack": "^4.16.5",
+    "webpack-node-externals": "^1.7.2"
   }
 }
