feat: Include memory usage in stats
- limit to 1000 tests
- generate test files in one loop
- Update README with current numbers and memory usage

--- a/results.template
+++ b/results.template
@@ -1,2 +1,2 @@
-| Runner        | 10 tests  | 100 tests  | 1000 tests | 5000 tests |
-| :------------ |:--------- |:---------  |:---------  |:--------- |
+| Runner         | 1 test     | 10 tests   | 100 tests  | 1000 tests | memory     |
+| :------------- | :--------- | :--------- | :--------- | :--------- | :--------- |
